fix product-label spacing

--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -158,7 +158,8 @@ a.link.alert {
   font-size: 0.75rem;
   font-weight: normal;
   margin-bottom: inherit;
-  margin: 0.1rem;
+  margin: 0.2rem;
+  float: left;
   overflow: hidden;
   padding: 0.25rem 0.5rem;
   text-align: center;
